Initial Project Version

--- a/polls/templates/polls/detail.html
+++ b/polls/templates/polls/detail.html
@@ -1,5 +1,5 @@
 
-{% extends "personal/header.html" %}
+{% extends "home/header.html" %}
 
 {% block content %}
 	<h1>{{ question.question_text }}</h1>
