--- a/home/templates/home/header.html
+++ b/home/templates/home/header.html
@@ -5,7 +5,7 @@
 	<title>Mutachaa</title>
 	<meta charset="utf-8" />
 	{% load staticfiles %}
-	<link rel="stylesheet" href="{% static 'personal/css/bootstrap.min.css' %}" type = "text/css"/>
+	<link rel="stylesheet" href="{% static 'home/css/bootstrap.min.css' %}" type = "text/css"/>
 	<meta name="viewport" content = "width=device-width, initial-scale=1.0">
 	
 	<style type="text/css">
@@ -22,7 +22,7 @@
 			  <div class="col-sm-2">
 				  <br>
 				  <center>
-					<img src="{% static 'personal/img/profile.jpg' %}" class="img-responsive" style='max-height:100px;' alt="face">
+					<img src="{% static 'home/img/logo.jpg' %}" class="img-responsive" style='max-height:100px;' alt="face">
 				  </center>
 			  </div>
 			  <div class="col-sm-10">
@@ -43,9 +43,10 @@
 			<div class="well bs-sidebar" id="sidebar" style="background-color:#fff">
 			  <ul class="nav nav-pills nav-stacked">
 				<li><a href='/'>Home</a></li>
-				<li><a href='/blog/'>Blog</a></li>
+				<li><a href='/personal/'>My Profile</a></li>
 				<li><a href='/polls/'>Polls</a></li>
 				<li><a href='/contact/'>Contact</a></li>
+				<li><a href='/blog/'>Blog</a></li>
 			  </ul>
 			</div> <!--well bs-sidebar affix-->
 		  </div> <!--col-sm-2-->
@@ -61,7 +62,7 @@
 	</div>
 	<footer>
 		<div class="container-fluid" style='margin-left:15px'>
-			<p><a href="#" target="blank">Contact</a> | <a href="#" target="blank">LinkedIn</a> | <a href="#" target="blank">Twitter</a> | <a href="#" target="blank">Google+</a></p>
+			<p><a href="#" target="blank">Contact</a> | <a href="https://www.linkedin.com/in/augustine-emeka-a34a6882/" target="blank">LinkedIn</a> | <a href="https://www.facebook.com/jambwaecnecouni/" target="blank">Facebook</a> | <a href="https://www.youtube.com/channel/UCs_OTgKhssqR-_dAkf55OBA" target="blank">Youtube</a></p>
 		</div>
 	</footer>	
 	
