--- a/polls/templates/polls/results.html
+++ b/polls/templates/polls/results.html
@@ -1,6 +1,6 @@
 
 
-{% extends "personal/header.html" %}
+{% extends "home/header.html" %}
 
 {% block content %}
 	<h1>{{ question.question_text }}</h1>
